overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -330,6 +330,7 @@ main {
 
 .desc {
     background-color: #f0f0f0;
+    overflow-y: hidden;
 }
 
 .desc .vis-con,
